# menu-ocr

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  server.py  start.sh
models/: evaluation_results.json  gb_classifier.json  mlp_classifier.json  mlp_classifier.pkl  rf_classifier.json  text_classifier.pkl  xgb_classifier.json
paper/: menu_ocr_paper.aux  menu_ocr_paper.out  menu_ocr_paper.tex
scripts/: api_extract.py  compare_ocr.py  download_cord.py  error_analysis.py  evaluate.py  evaluate_all_models.py  evaluate_samples.py  train_classifier.py
src/: __init__.py  instrumentation.py  pipeline.py
src/classifier/: __init__.py  classifier.py  ensemble.py
src/hierarchy/: __init__.py  font_analysis.py  fsm.py  lexical.py
src/layout/: __init__.py  columns.py  reading_order.py
src/matching/: __init__.py  bipartite.py
src/models/: __init__.py  schema.py
src/ocr/: __init__.py  engine.py
src/visualization/: __init__.py  diagnostics.py
web/backend/: package-lock.json  package.json  server.js
web/frontend/: index.html  package-lock.json  package.json  vite.config.js
web/frontend/src/: App.jsx  main.jsx  styles.css
web/frontend/src/components/: Header.jsx  JsonModal.jsx  UploadModal.jsx  UploadZone.jsx
web/frontend/src/context/: AppContext.jsx
web/frontend/src/pages/: ComparePage.jsx  ResearchPage.jsx  ResultPage.jsx  ResultsPage.jsx  UploadPage.jsx
web/frontend/src/styles/: index.css
web/frontend/src/utils/: api.js
